--- a/css/styles.css
+++ b/css/styles.css
@@ -10965,14 +10965,14 @@ header.masthead {
   background-size: cover;
 }
 header.masthead .masthead-subheading {
-  font-size: 1.5rem;
+  /*font-size: 1.5rem;*/
   font-style: italic;
   line-height: 1.5rem;
   margin-bottom: 25px;
   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 header.masthead .masthead-heading {
-  font-size: 3.25rem;
+  font-size: 2rem;
   font-weight: 700;
   line-height: 3.25rem;
   margin-bottom: 2rem;
@@ -11328,4 +11328,17 @@ section#contact form#contactForm :-ms-input-placeholder {
 
 .copyright{
   text-align: center;
+}
+
+@media (max-width: 450px) {
+  .btn-xl {
+    padding: 0.75rem 1rem;
+    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 0.75rem;
+    font-weight: 700;
+    }
+
+  .page-section h2.section-heading, .page-section .section-heading.h2 {
+      font-size: 1.7rem;
+}
 }
