--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,7 @@ h3, .h3 {
 }
 
 h4, .h4 {
-  font-size: calc(1.275rem + 0.3vw);
+  font-size: calc(1.2rem + 0.3vw);
 }
 @media (min-width: 1200px) {
   h4, .h4 {
@@ -2769,10 +2769,10 @@ textarea.form-control-lg {
 .btn {
   --bs-btn-padding-x: 0.75rem;
   --bs-btn-padding-y: 0.375rem;
-  --bs-btn-font-family: ;
-  --bs-btn-font-size: 1rem;
-  --bs-btn-font-weight: 400;
-  --bs-btn-line-height: 1.5;
+  --bs-btn-font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-btn-font-size: 0.7rem;/*노란버튼 Discover*/
+  --bs-btn-font-weight: 400; 
+  --bs-btn-line-height: 1;/*노란버튼 Discover*/
   --bs-btn-color: #212529;
   --bs-btn-bg: transparent;
   --bs-btn-border-width: 1px;
@@ -10864,6 +10864,8 @@ p {
   margin-bottom: 4rem;
 }
 
+
+
 @media (min-width: 768px) {
   section {
     padding: 9rem 0;
@@ -11256,6 +11258,8 @@ header.masthead .masthead-heading {
   width: 14rem;
   height: 14rem;
   border: 0.5rem solid rgba(0, 0, 0, 0.1);
+  
+
 }
 .team-member h4, .team-member .h4 {
   margin-top: 1.5rem;
@@ -11328,17 +11332,13 @@ section#contact form#contactForm :-ms-input-placeholder {
 
 .copyright{
   text-align: center;
+  padding-top: 15px;
 }
 
 @media (max-width: 450px) {
-  .btn-xl {
-    padding: 0.75rem 1rem;
-    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-size: 0.75rem;
-    font-weight: 700;
-    }
-
+ 
   .page-section h2.section-heading, .page-section .section-heading.h2 {
-      font-size: 1.7rem;
+      font-size: 1.6rem;
 }
 }
+
