--- a/css/styles.css
+++ b/css/styles.css
@@ -10849,7 +10849,9 @@ p {
 }
 
 .page-section {
-  padding: 6rem 0;
+  padding: 6rem ;
+  padding-bottom: 6rem;
+  
 }
 .page-section h2.section-heading, .page-section .section-heading.h2 {
   font-size: 2.5rem;
@@ -10992,8 +10994,8 @@ header.masthead .masthead-heading {
     line-height: 2.25rem;
     margin-bottom: 2rem;
   }
-  header.masthead .masthead-heading {
-    font-size: 4.5rem;
+  header.masthead .masthead-heading { /*seoastyle portfolio*/
+    font-size: 4rem;
     font-weight: 700;
     line-height: 4.5rem;
     margin-bottom: 4rem;
