--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,22 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+
+.container2{
+    margin-top: 50px !important;
+    margin-bottom: 0px !important;
+    margin-right: 50px !important;
+    margin-left: 50px !important;
+    }
+
+.container3{
+     margin-top: 0px !important;
+     margin-bottom: 50px !important;
+     margin-right: 50px !important;
+     margin-left: 50px !important;
+     }    
+
+
 hr {
   margin: 1rem 0;
   color: inherit;
@@ -307,6 +323,9 @@ figure {
 img,
 svg {
   vertical-align: middle;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 table {
@@ -8166,10 +8185,10 @@ textarea.form-control-lg {
   background-color: rgba(var(--bs-danger-rgb), var(--bs-bg-opacity)) !important;
 }
 
-.bg-light {
+/*.bg-light {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
-}
+}*/
 
 .bg-dark {
   --bs-bg-opacity: 1;
@@ -10848,11 +10867,12 @@ p {
   line-height: 1.75;
 }
 
-.page-section {
+/*.page-section {
   padding: 6rem ;
-  padding-bottom: 6rem;
-  
-}
+  padding-bottom: 6rem; 
+}*/
+
+
 .page-section h2.section-heading, .page-section .section-heading.h2 {
   font-size: 2.5rem;
   margin-top: 0;
@@ -10869,8 +10889,9 @@ p {
 
 
 @media (min-width: 768px) {
-  section {
-    padding: 9rem 0;
+  section {  /*섹션*/
+    padding-top: 6rem;  
+    padding-bottom: 6rem;
   }
 }
 .btn-xl {
@@ -11341,6 +11362,39 @@ section#contact form#contactForm :-ms-input-placeholder {
  
   .page-section h2.section-heading, .page-section .section-heading.h2 {
       font-size: 1.6rem;
+}
+
+section{
+  padding-top: 4rem;
+  padding-bottom: 2rem;
+}
+
+
+.row {
+ 
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: auto;
+  margin-left: auto;
+  
+  }
+
+.img-fluid{
+  vertical-align: middle;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 100%;
+  
+
+}
+
+.team-member img{
+  vertical-align: middle;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  
 }
 }
 
